// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OpeningImage50 snapshots minimal snapshot (only src) 1`] = `
<section
  class="relative w-[calc(100vw+2px)] -translate-x-[calc(50%+1px)] left-1/2 bg-black-dark mb-16 md:mb-56"
  data-diagram="image-50-right-title-left"
>
  <div
    class="flex flex-col items-center gap-responsive md:grid md:grid-cols-12 xl:flex xl:flex-row xl:items-stretch"
  >
    <div
      class="flex flex-col flex-1 justify-center text-center max-md:px-16 md:col-start-2 md:col-end-12 xl:max-w-none xl:mx-0 xl:text-left"
    >
      <div
        class="flex flex-col items-center gap-12 pt-40 pb-24 xl:py-40 max-w-550 md:max-w-835 mx-auto xl:pl-32 xl:max-w-667 text-center"
      >
        <div
          data-content="{}"
          data-layout=""
          data-testid="opening-addons"
        />
        <div
          data-testid="opening-titles"
        />
      </div>
    </div>
    <div
      class="relative aspect-1/1 md:mx-auto xl:mx-0 md:col-start-2 md:col-end-12 xl:flex-1 xl:h-[calc(100vh-var(--header-sticky-height))] xl:max-w-none overflow-hidden"
    >
      <img
        class="w-full h-full object-cover opacity-60 aspect-1/1"
        data-testid="image-ui"
        fetchpriority="high"
        loading="eager"
        src="https://example.com/image.jpg"
      />
    </div>
  </div>
</section>
`;

exports[`OpeningImage50 snapshots snapshot with all props 1`] = `
<section
  class="relative w-[calc(100vw+2px)] -translate-x-[calc(50%+1px)] left-1/2 bg-black-dark mb-16 md:mb-56"
  data-diagram="image-50-right-title-left"
>
  <div
    class="flex flex-col items-center gap-responsive md:grid md:grid-cols-12 xl:flex xl:flex-row xl:items-stretch"
  >
    <div
      class="flex flex-col flex-1 justify-center text-center max-md:px-16 md:col-start-2 md:col-end-12 xl:max-w-none xl:mx-0 xl:text-left"
    >
      <div
        class="flex flex-col items-center gap-12 pt-40 pb-24 xl:py-40 max-w-550 md:max-w-835 mx-auto xl:pl-32 xl:max-w-667 text-center"
      >
        <div
          data-content="{"taxonomy":{"sections":[]}}"
          data-layout="basic"
          data-testid="opening-addons"
        />
        <div
          data-testid="opening-titles"
        >
          <h1
            class="text-neutral-1"
          >
            Título principal
          </h1>
          <h2
            class="text-neutral-1"
          >
            Título secundario
          </h2>
        </div>
        <p
          class="font-primary text-neutral-1 text-center text-subheading-md xl:max-w-635"
        >
          Bajada de prueba
        </p>
      </div>
    </div>
    <div
      class="relative aspect-1/1 md:mx-auto xl:mx-0 md:col-start-2 md:col-end-12 xl:flex-1 xl:h-[calc(100vh-var(--header-sticky-height))] xl:max-w-none overflow-hidden"
    >
      <img
        alt="Alt de prueba"
        class="w-full h-full object-cover opacity-60 aspect-1/1"
        data-testid="image-ui"
        fetchpriority="high"
        height="675"
        loading="eager"
        sizes="(max-width: 767px) 375px, 1200px"
        src="https://example.com/image.jpg"
        srcset="image-375.jpg 375w, image-1200.jpg 1200w"
        width="1200"
      />
    </div>
  </div>
</section>
`;

exports[`OpeningImage50 snapshots snapshot without image 1`] = `
<section
  class="relative w-[calc(100vw+2px)] -translate-x-[calc(50%+1px)] left-1/2 bg-black-dark mb-16 md:mb-56"
  data-diagram="image-50-right-title-left"
>
  <div
    class="flex flex-col items-center gap-responsive md:grid md:grid-cols-12 xl:flex xl:flex-row xl:items-stretch"
  >
    <div
      class="flex flex-col flex-1 justify-center text-center max-md:px-16 md:col-start-2 md:col-end-12 xl:max-w-none xl:mx-0 xl:text-left"
    >
      <div
        class="flex flex-col items-center gap-12 pt-40 pb-24 xl:py-40 max-w-550 md:max-w-835 mx-auto xl:pl-32 xl:max-w-667 text-center"
      >
        <div
          data-content="{"taxonomy":{"sections":[]}}"
          data-layout="basic"
          data-testid="opening-addons"
        />
        <div
          data-testid="opening-titles"
        >
          <h1
            class="text-neutral-1"
          >
            Título principal
          </h1>
          <h2
            class="text-neutral-1"
          >
            Título secundario
          </h2>
        </div>
        <p
          class="font-primary text-neutral-1 text-center text-subheading-md xl:max-w-635"
        >
          Bajada de prueba
        </p>
      </div>
    </div>
    <div
      class="relative aspect-1/1 md:mx-auto xl:mx-0 md:col-start-2 md:col-end-12 xl:flex-1 xl:h-[calc(100vh-var(--header-sticky-height))] xl:max-w-none overflow-hidden"
    />
  </div>
</section>
`;

exports[`OpeningImage50 snapshots snapshot without subheadline 1`] = `
<section
  class="relative w-[calc(100vw+2px)] -translate-x-[calc(50%+1px)] left-1/2 bg-black-dark mb-16 md:mb-56"
  data-diagram="image-50-right-title-left"
>
  <div
    class="flex flex-col items-center gap-responsive md:grid md:grid-cols-12 xl:flex xl:flex-row xl:items-stretch"
  >
    <div
      class="flex flex-col flex-1 justify-center text-center max-md:px-16 md:col-start-2 md:col-end-12 xl:max-w-none xl:mx-0 xl:text-left"
    >
      <div
        class="flex flex-col items-center gap-12 pt-40 pb-24 xl:py-40 max-w-550 md:max-w-835 mx-auto xl:pl-32 xl:max-w-667 text-center"
      >
        <div
          data-content="{"taxonomy":{"sections":[]}}"
          data-layout="basic"
          data-testid="opening-addons"
        />
        <div
          data-testid="opening-titles"
        >
          <h1
            class="text-neutral-1"
          >
            Título principal
          </h1>
          <h2
            class="text-neutral-1"
          >
            Título secundario
          </h2>
        </div>
      </div>
    </div>
    <div
      class="relative aspect-1/1 md:mx-auto xl:mx-0 md:col-start-2 md:col-end-12 xl:flex-1 xl:h-[calc(100vh-var(--header-sticky-height))] xl:max-w-none overflow-hidden"
    >
      <img
        alt="Alt de prueba"
        class="w-full h-full object-cover opacity-60 aspect-1/1"
        data-testid="image-ui"
        fetchpriority="high"
        height="675"
        loading="eager"
        sizes="(max-width: 767px) 375px, 1200px"
        src="https://example.com/image.jpg"
        srcset="image-375.jpg 375w, image-1200.jpg 1200w"
        width="1200"
      />
    </div>
  </div>
</section>
`;
